--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -17,8 +17,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - run: npm install
-      - run: npm run build
+      - run: yarn install
+      - run: yarn build
 
       - uses: chrislennon/action-aws-cli@v1.1
       - run: aws s3 sync dist s3://${{ secretsAWS_S3_BUCKET_NAME }}/container/latest
